--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -29,7 +29,7 @@
     grid-template-columns: 1fr 1fr;
 
     /* bg settings */
-    background-size: 100%;
+    background-size: 101%;
     border-radius: var(--s10);
 
     /* alignment */
